# streamdeck-controller-rs

./: Cargo.toml  README.md
doc/: button1_down.py  example_config.yml
src/: main.rs
src/config/: button.rs  button_face.rs  button_position.rs  color.rs  defaults.rs  error.rs  event_handler.rs  foreground_window_condition.rs  foreground_window_handler.rs  label.rs  mod.rs  page.rs
src/foreground_window/: error.rs  mod.rs
src/foreground_window/linux/: foreground_window.rs
src/foreground_window/windows/: foreground_window.rs  mod.rs
src/input_event/: foreground_window_event_loop.rs  mod.rs  stream_deck_event_loop.rs
src/script_engine/: mod.rs
src/script_engine/python/: app_state.rs  engine.rs  mod.rs  stdout.rs
src/state/: app_state.rs  button.rs  button_face.rs  button_position.rs  defaults.rs  error.rs  event_handler.rs  foreground_window_condition.rs  mod.rs  page.rs
src/state/page/: mod.rs  positioned_button_setup.rs
