[package]
name = "streamdeck-controller-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0"
image = "0.23.6"
imageproc = { git = "https://github.com/image-rs/imageproc" }
rusttype = "~0"
streamdeck-hid-rs = "~0"
hidapi = "~1"
more-asserts = "~0"
clap = { version = "~3", features = ["derive"] }
