[package]
name = "streamdeck-controller-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
image = "0.24.1"
imageproc = { git = "https://github.com/image-rs/imageproc" }
rusttype = "0.9.2"
streamdeck-hid-rs = { git = "https://github.com/RudolfVonKrugstein/streamdeck-hid-rs" }
hidapi = "1.3.3"
more-asserts = "0.2.2"
clap = { version = "3.1.5", features = ["derive"] }
pyo3 = { version = "0.16.0", features = ["auto-initialize"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb= "0.9.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.33.0"
features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
]
